src/LuckyDraw V1.0/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>IsInterestedInCharket__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested In Charket</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberId__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>Number ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WeChatQRCodeURL__c</fullName>
        <label>WeChat QR Code URL</label>
        <type>Url</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>Email_Opt_Out_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.EMAIL_OPT_OUT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.EMAIL_OPT_OUT</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Email Opt Out Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>